--- a/style.css
+++ b/style.css
@@ -1,42 +1,170 @@
-body {
-    color: white;
-    font-family: "Gotham Rounded A", "Gotham Rounded B", "Gotham Rounded", "Helvetica Neue", Helvetica, Arial, sans-serif;
+/*-------Base Rules-------*/
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
+
+* {
     box-sizing: border-box;
-    margin: 0;
-    border: 0;
-    font-size: 2rem;  
 }
-
-.header {
-    background-color: #3659a2;
-    text-align: center;
-    padding: 15px 0;
-    width: 50%;
-    margin: auto;
-    margin-top: 50px;  
-}
-
-.floating-box {
-    width: 50%;
-    margin: auto;
-    margin-top: 17px;
-    background-color: #3659a2;
+body {
+    font-family: "Work Sans", Arial, sans-serif;
+    font-size: 1.4em;
     line-height: 1.4;
-    font-weight: 300;
+  
+    background: rgb(44, 226, 217);
+    color: white;
+
+    display: flex;
+    flex-direction: column;
+    
+    min-height: 100vh;
+}
+
+h2 {
+    font-size: 1.6em;
+    font-weight: 600;
+}
+
+h3 {
+    font-size: 1.4em;
+}
+
+p {
+    margin-top: .625em;
+}
+
+.box-margin {
+    width: 97%;   
+}
+
+/*-------Layout Rules-------*/
+.wrapper {
+    flex-grow: 1;
+    
+    margin-top: 1em;
+}
+
+.container {
+    background: rgb(0, 116, 87);
+
+    padding: 20px 0;
+    margin: 30px auto;
+    border-radius: 5px;
+
+    box-shadow: 0 16px 5px -12px rgb(0,0,0, .4)
+}
+    .container p {
+        padding-left: 2.5%;
+        padding-right: 2.5%;
+    }
+
+.footer {
+    background: rgb(0, 116, 87);
+
+    text-align: center;
+    font-size: 0.65em;
+    
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+    .footer p{
+        margin: 0.625em 0;
+    }
+
+.input {
+    display: block;
+    
+    margin: 0.625em auto;
+    padding: 0.625em;
+    width: 95%;
+
+    border: 0;
+    border-radius: 3px;
+}
+    .input::placeholder {
+        color: rgba(170, 170, 170, 0.836);
+    }
+
+.odd-color {
+    margin-top: 15px;
+}
+
+#input-form .odd-color:nth-child(odd) {
+    background: rgb(0, 134, 101);
+}
+
+#story {
+    font-size: 1.5em;
+}
+
+/*-------Module Rules-------*/
+.flex-display {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.center {
+    margin: 0 auto;
     text-align: center;
 }
 
-h1,
-p {
-    margin: 0;
+.button {
+    background: rgb(0, 168, 154);
+    color: white;
+    background-image: linear-gradient( rgb(0, 180, 165), rgb(0, 131, 120));
+    
+    font-family: inherit;
+    font-size: 100%;
+    font-weight: bold;
+    letter-spacing: .07em;
+
+    border: none;
+    border-radius: 6px;
+    box-shadow: 1px 2px 5px rgb(0,0,0, .6);
+    height: 60px;
+    width: 95%;
+    margin: 1.5625em auto 0.8em;
+
+    transition: 170ms ease-in-out,
+                transform 150ms ease;
+
 }
 
-p {
-    padding: 15px 20px;
+/*-------State Rules-------*/
+
+.button:hover,
+.button:focus {
+    background: rgba(0, 253, 232, 0.63);
+    cursor: pointer;
 }
 
-.header,
-.floating-box {
-    border-radius: 5px;
-    box-shadow: 0px 19px 8px -15px rgba(0, 0, 0, .7);
+.button:active {
+    transform: scale(0.98);
 }
+
+
+
+/*-------Media Queries-------*/
+
+@media (min-width: 769px) {
+    body {
+        font-size: 1.6em;
+        line-height: 1.5;
+    }
+
+
+    .box-margin {
+        width: 80%;   
+    }
+
+    .button,
+    .input {
+        max-width: 26em;
+    }
+
+    .odd-color p,
+    #story {
+        text-align: center;
+    }
+
+}
+
